Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63673

PinchArea uses wrong coordinate system when inside a rotated container item

    XMLWordPrintable

Details

    • Linux/X11, Windows
    • 7642205be45135add120373299df02e05f4ffc58 (qt/qtdeclarative/dev) defe68463230b454d3ddfb039ca423c01cddab91 (qt/qtdeclarative/6.1) 3001f62f4db8fcc4f5f6c0e96da0ef39cff92086 (qt/tqtc-qtdeclarative/5.15)

    Description

      Steps to reproduce:

      • Run the sample attached on a machine that has a touchscreen.
      • Grap the red rectangle with two fingers (pinch gesture) and move it around, and finally, let go.
      • Rotate the container area by pressing the button on the right.
      • Grap the red rectangle with two fingers and move it around.
        EXPECTED: The movement of the rectangle follows the hand movements.
        ACTUAL: The movement of the rectangle has wrong coordinates.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            risto.sipola Risto Sipola
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes