Make PinchArea translate correctly inside a rotated parent

Fixes: QTBUG-63673
Change-Id: I91231bb8555b7eb02a9580f9f184b261d8bd44c8
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 7642205be45135add120373299df02e05f4ffc58)
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>